Start of MongoDB integration - Basic repository interfaces for OPC UA Servers and Variables - Basic getters in OPC UA Server controller (WIP) - Basic inserter in OPC UA Server controller (does not work yet)

--- a/application.properties
+++ b/application.properties
@@ -8,6 +8,9 @@ app.encoding=@project.build.sourceEncoding@
 app.java.version=@java.version@
 server.port=9090
 
+# MongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/iotgateway
+
 # LOGGING
 logging.file=logs/iot_rest.log
 #logging.level.root=WARN
