Switched to using services. - Controller -> Service -> Repository - So service handless request business logic - Repository handles db query logic - Controller serializes query and logs any errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ app.java.version=@java.version@
 server.port=9090
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/iotgateway
+spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
 
 # LOGGING
 logging.file=logs/iot_rest.log
