DateTime ISO-format serialization/de-serialization works now.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ app.java.version=@java.version@
 server.port=9090
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
+spring.data.mongodb.uri=mongodb://localhost:27017/iotgateway
+
+# Parsing
+spring.jackson.serialization-inclusion=non_null
 
 # LOGGING
 logging.file=logs/iot_rest.log
