--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>io.github.harha</groupId>
-	<artifactId>iot_rest</artifactId>
-	<version>0.0.1</version>
+	<artifactId>opc_ua_data_rest</artifactId>
+	<version>0.0.2</version>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
