--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,19 @@
 # ----------------------------------------
 
 # APPLICATION
-spring.application.name=iot_rest
+spring.application.name=opc_ua_data_rest
 app.encoding=@project.build.sourceEncoding@
 app.java.version=@java.version@
 server.port=9090
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
+spring.data.mongodb.uri=mongodb://localhost:27017/iotgateway
 
 # Parsing
 spring.jackson.serialization-inclusion=non_null
 
 # LOGGING
-logging.file=logs/iot_rest.log
+logging.file=logs/opc_ua_data_rest.log
 #logging.level.root=WARN
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
