OPCUAServer identifier field added. SocketIO server added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # CORE PROPERTIES
 # ----------------------------------------
 
-# APPLICATION
+# REST server
 spring.application.name=opc_ua_data_rest
 app.encoding=@project.build.sourceEncoding@
 app.java.version=@java.version@
