--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,30 @@
 	
 	<groupId>io.github.harha</groupId>
 	<artifactId>opc_ua_data_rest</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
+	
+	<developers>
+		<developer>
+			<id>harha</id>
+			<name>Toni Hämeenniemi</name>
+			<email>toni.s.h93@gmail.com</email>
+			<url>https://github.com/harha</url>
+			<roles>
+				<role>developer</role>
+			</roles>
+		</developer>
+	</developers>
+	
+	<properties>
+		<java.version>1.8</java.version>
+	  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.2.RELEASE</version>
 	</parent>
-	
-	<properties>
-	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	  <java.version>1.8</java.version>
-	</properties>
 	
 	<dependencies>
 	    <dependency>
@@ -37,11 +49,6 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-joda</artifactId>
 			<version>2.8.4</version><!--$NO-MVN-MAN-VER$-->
-		</dependency>
-		<dependency>
-			<groupId>com.corundumstudio.socketio</groupId>
-			<artifactId>netty-socketio</artifactId>
-			<version>1.7.12</version>
 		</dependency>
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
