--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
 	<groupId>io.github.harha</groupId>
 	<artifactId>opc_ua_data_rest</artifactId>
 	<version>0.0.4</version>
+	<name>OPC UA Data REST</name>
+	<description>REST Service for OPC UA data storing / retrieval</description>
 
 	<developers>
 		<developer>
@@ -39,6 +41,14 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.4</version><!--$NO-MVN-MAN-VER$ -->
@@ -59,6 +69,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-parent</artifactId>
+				<version>Brixton.M4</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
@@ -81,5 +103,6 @@
 			<url>https://repo.spring.io/libs-release</url>
 		</pluginRepository>
 	</pluginRepositories>
+
 
 </project>
