--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,27 @@
 # CORE PROPERTIES
 # ----------------------------------------
 
-# REST server
+# REST
 spring.application.name=opc_ua_data_rest
 app.encoding=@project.build.sourceEncoding@
 app.java.version=@java.version@
 server.port=9090
+server.contextPath=/opc_ua_data_rest
+
+# Security
+security.user.name=admin
+security.user.password=password
+security.oauth2.client.clientId=opc_ua_data_rest
+security.oauth2.client.clientSecret=password
+security.oauth2.client.authorized-grant-types=authorization_code,refresh_token,password
+security.oauth2.client.scope=openid
 
 # MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/iotgateway
 
-# Parsing
+# JSON serialization
 spring.jackson.serialization-inclusion=non_null
 
-# LOGGING
+# Logging
 logging.file=logs/opc_ua_data_rest.log
-#logging.level.root=WARN
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.hibernate=ERROR
+logging.level.root=WARN
