Authentication works now! - Basic auth, no OAuth2 - One configurable admin write/read user - One configurable readonly user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,11 @@ server.port=9090
 # MongoDB
 spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
 
-# Security
-security.user.name=admin
-#security.user.password=password
-#security.oauth2.client.clientId=opc_ua_data_rest
-#security.oauth2.client.clientSecret=password
-#security.oauth2.client.authorized-grant-types=authorization_code,refresh_token,password
-#security.oauth2.client.scope=openid
+# Security, TODO: Make this work
+app.authproperties.adminuser=opc_ua_data_rest_admin
+app.authproperties.adminpass=password
+app.authproperties.readonlyuser=opc_ua_data_rest_readonly
+app.authproperties.readonlypass=password
 
 # JSON serialization
 spring.jackson.serialization-inclusion=non_null
