Basic auth done. Admin/Readonly credentials are hardcoded for now.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,10 @@ server.port=9090
 spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
 
 # Security, TODO: Make this work
-app.authproperties.adminuser=opc_ua_data_rest_admin
-app.authproperties.adminpass=password
-app.authproperties.readonlyuser=opc_ua_data_rest_readonly
-app.authproperties.readonlypass=password
+authentication.adminuser=opc_ua_data_rest_admin
+authentication.adminpass=password1
+authentication.readonlyuser=opc_ua_data_rest_readonly
+authentication.readonlypass=password2
 
 # JSON serialization
 spring.jackson.serialization-inclusion=non_null
