Authentication properties can now be changed in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,10 @@ server.port=9090
 spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
 
 # Security, TODO: Make this work
-authentication.adminuser=opc_ua_data_rest_admin
-authentication.adminpass=password1
-authentication.readonlyuser=opc_ua_data_rest_readonly
-authentication.readonlypass=password2
+authentication.adminUser=opc_ua_data_rest_admin
+authentication.adminPass=password
+authentication.readoOlyUser=opc_ua_data_rest_readonly
+authentication.readOnlyPass=password
 
 # JSON serialization
 spring.jackson.serialization-inclusion=non_null
