--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ app.java.version=@java.version@
 server.port=9090
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://harha.us.to:27017/iotgateway
+spring.data.mongodb.uri=mongodb://user:pwd@harha.us.to:27017/opc_ua_data?authSource=admin
 
-# Security, TODO: Make this work
+# Security
 authentication.adminUser=opc_ua_data_rest_admin
 authentication.adminPass=password
 authentication.readOnlyUser=opc_ua_data_rest_readonly
