Added docker support.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 spring.application.name=opc_ua_data_rest
 app.encoding=@project.build.sourceEncoding@
 app.java.version=@java.version@
-server.port=9090
+server.port=8080
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://user:pwd@harha.us.to:27017/opc_ua_data?authSource=admin
+spring.data.mongodb.uri=mongodb://192.168.99.100:27017/opc_ua_data
 
 # Security
 authentication.adminUser=opc_ua_data_rest_admin
